--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/reactstrap": "^8.5.0",
     "@types/styled-components": "^5.1.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -21,6 +23,8 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
+    "reactstrap": "^8.5.1",
+    "sass": "^1.26.10",
     "styled-components": "^5.1.1",
     "typescript": "~3.8.2"
   },
