--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "reactstrap": "^8.5.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.26.10",
     "styled-components": "^5.1.1",
     "typescript": "~3.8.2"
