--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.0",
     "@types/styled-components": "^5.1.1",
     "axios": "^0.19.2",
@@ -21,8 +22,10 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.15",
     "reactstrap": "^8.5.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.26.10",
