--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-sage": "^0.0.60",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.15",
