--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "moment": "^2.27.0",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
@@ -31,7 +32,8 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.26.10",
     "styled-components": "^5.1.1",
-    "typescript": "~3.8.2"
+    "typescript": "~3.8.2",
+    "use-query-params": "^1.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
